--- a/frontend/src/Pages/Home.css
+++ b/frontend/src/Pages/Home.css
@@ -6,7 +6,7 @@
 }
 .scoreSubTitle{
     font-size:14px;
-  color: white;
+ 
 }
 .iconStyle{
     margin-top:20px;
@@ -14,12 +14,12 @@
     color: white;
 }
 .gradient{
-    background:rgb(40,34,70);
-    background:linear-gradient(158deg,rgb(192, 190, 204) 0%,rgba(30,47,141,1) 100%)
+    background:rgb(236, 239, 149);
+    background:linear-gradient(158deg,rgb(192, 190, 204) 0%,rgb(215, 226, 207) 100%)
 }
 .gradientLight{
     background:rgb(53,138,148);
-    background:linear-gradient(158deg,rgb(193, 198, 169) 0%,rgb(86, 109, 237) 100%)
+    background:linear-gradient(158deg,rgb(193, 198, 169) 0%,#8eced3 100%)
 }
 .bgColor{
     min-height: 100vh;
